# echobot

./: .gitignore  LICENSE  bot.py  pyproject.toml
assets/strings/: default.yaml
echobot/assets/strings/styles/: neutral.yaml
echobot/permission/: __init__.py  owner.py
echobot/plugins/admin/: __init__.py  feedback.py  glob.py  reboot.py  title.py
echobot/plugins/admin/cli/: __init__.py  glob.py  title.py
echobot/plugins/botman/: __init__.py  feedback.py  glob.py  reboot.py
echobot/plugins/botman/cli/: __init__.py  feedback.py  glob.py  reboot.py
echobot/utils/: __init__.py  argv_parser.py  confirm_intent.py  cooldown.py  segment_parser.py  styled_string.py
