[tool.poetry]
name = "echobot"
version = "0.1.0"
description = "A Chatbot for QQ Group Based on Nonebot 2"
authors = ["Satoshi Jek <jks15satoshi@gmail.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
nonebot2 = "^2.0.0-alpha.11"
nonebot-adapter-cqhttp = "^2.0.0-alpha.11"
nonebot-plugin-cooldown = "^1.0.2"
nonebot-plugin-styledstr = "^0.2.2"
jieba = "^0.42.1"

[tool.poetry.dev-dependencies]
nb-cli = "^0.4.0"
nonebot-test = "^0.1.0"
autopep8 = "^1.5.4"
pytest = "^6.2.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
